--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,12 @@
-<h>投稿一覧</h1>
+<h1>投稿一覧</h1>
 
 <% @lists.each do |list| %>
 
   <p>タイトル</p>
-  <span><%= list.title %></span>
+  <span>
+    <%= link_to list.title,list_params(list.id) %>
+  </span>
+  
   
   <% end %>
   
